kubernetes/decoder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: decoder-service
spec:
  selector:
    app: decoder
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8001
  type: LoadBalancer
